--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,38 +1,30 @@
 stages:
   - terraform-deploy
   - verify
-  - destroy  # Only run if verification succeeds
+  - terraform-destroy  # Only run if verification succeeds
 
 variables:
-  # Replace with your desired AWS region
-  AWS_REGION: "eu-west-1"
-  
-  # Access Terraform Outputs (replace with actual output names)
-  ECS_CLUSTER_NAME: "${CI_ENVIRONMENT_SLUG}-ecs-cluster"  # Assuming output format
-  ECS_SERVICE_NAME: "hello-world-service"
-  LOAD_BALANCER_DNS_NAME: "${TF_OUTPUT_load_balancer_dns_name}"  # Assuming output format
+  AZURE_CLIENT_ID: $AZURE_CLIENT_ID  # Service principal client ID (protected variable)
+  AZURE_CLIENT_SECRET: $AZURE_CLIENT_SECRET  # Service principal secret (protected variable)
+  AZURE_TENANT_ID: $AZURE_TENANT_ID  # Azure tenant ID (protected variable)
+  AZURE_SUBSCRIPTION_ID: $AZURE_SUBSCRIPTION_ID  # Azure subscription ID (protected variable)
+  AZURE_URL: "https://dev-test-default.azurewebsites.net/"
 
-image: hashicorp/terraform:1.3.7  # Terraform image with AWS provider
-
-services:
-  - awscli:latest  # AWS CLI service for verification 
-
-cache:
-  paths:
-    - ~/.terraform.d/plugin  # Cache Terraform plugins
+image: zenika/terraform-azure-cli:latest # Terraform image with Azure provider
 
 before_script:
-  - cd terraform
-  - terraform init -backend-config=".terraformrc"  # Initialize Terraform with backend config
-  - echo $CI_JOB_TOKEN | AWS configure set aws_access_key_id -
-  - echo $CI_JOB_TOKEN | AWS configure set aws_secret_access_key -
-  - apk add curl  # Install curl for verification
+  - cd azure-terraform
+  - terraform init
+  ## Login using service principal credentials (Recommended)
+  - az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET -t $AZURE_TENANT_ID
+  ## Set subscription (optional)
+  - az account set -s $AZURE_SUBSCRIPTION_ID
 
 terraform-deploy:
   stage: terraform-deploy
   script:
     - terraform validate  # Validate Terraform configuration
-    - terraform plan -out=plan.out  # Generate a plan
+    - terraform plan -out=plan.out -var-file="tfvars.example"  # Generate a plan
     - echo "Terraform plan:"
     - cat plan.out  # Show the generated plan for review (optional)
     - terraform apply -auto-approve plan.out  # Apply the plan if approved
@@ -41,7 +33,7 @@ verify:
   stage: verify
   script:
     - sleep 60  # Wait for service to spin up (adjust based on deployment time)
-    - curl -sSL -o /dev/null $LOAD_BALANCER_DNS_NAME  # Check for successful response
+    - curl -sSL -o /dev/null $AZURE_URL  # Check for successful response
     - test $? -eq 0  # Check if curl exit code is 0 (success)
 
   only:
@@ -50,15 +42,7 @@ verify:
 destroy:
   stage: destroy
   script:
-    - terraform destroy -force  # Destroy resources
+    - terraform destroy -force  -var-file="tfvars.example"  # Destroy resources
 
   only:
     - succeeded  # Only run destroy if verification succeeds
-
-.terraformrc:
-  # Configure Terraform backend (replace with your backend configuration)
-  backend "s3" {
-    bucket = "your-terraform-state-bucket"
-    key    = "path/to/state.tfstate"
-    region = "eu-west-1"
-  }
